# carambola-substrate-chain

node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/chainbridge/: Cargo.toml
pallets/chainbridge/src/: lib.rs
pallets/example/: Cargo.toml
pallets/example-erc721/: Cargo.toml
pallets/example-erc721/src/: lib.rs
pallets/example/src/: lib.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
