[package]
name = 'node-carambola'
version = '1.0.0'
description = ''
authors = ['Carambola']
homepage = ''
edition = '2021'
license = 'Unlicense'
publish = false
repository = ''
build = 'build.rs'

[[bin]]
name = 'node-carambola'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies.substrate-build-script-utils]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.11'
version = '3.0.0'

[dependencies.node-carambola-runtime]
path = '../runtime'
version = '1.0.0'

[dependencies]
jsonrpc-core = '18.0.0'
structopt = '0.3.8'

[dependencies.frame-benchmarking]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.11'


[dependencies.frame-benchmarking-cli]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.11'


[dependencies.pallet-transaction-payment-rpc]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.11'


[dependencies.sc-basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.11'
version = '0.10.0-dev'

[dependencies.sc-cli]
features = ['wasmtime']
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.11'
version = '0.10.0-dev'

[dependencies.sc-client-api]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.11'


[dependencies.sc-consensus]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.11'
version = '0.10.0-dev'

[dependencies.sc-consensus-aura]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.11'
version = '0.10.0-dev'

[dependencies.sc-executor]
features = ['wasmtime']
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.11'
version = '0.10.0-dev'

[dependencies.sc-finality-grandpa]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.11'
version = '0.10.0-dev'

[dependencies.sc-keystore]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.11'


[dependencies.sc-rpc]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.11'


[dependencies.sc-rpc-api]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.11'
version = '0.10.0-dev'

[dependencies.sc-service]
features = ['wasmtime']
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.11'
version = '0.10.0-dev'

[dependencies.sc-telemetry]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.11'


[dependencies.sc-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.11'


[dependencies.sc-transaction-pool-api]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.11'


[dependencies.sp-api]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.11'


[dependencies.sp-block-builder]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.11'


[dependencies.sp-blockchain]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.11'


[dependencies.sp-consensus]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.11'
version = '0.10.0-dev'

[dependencies.sp-consensus-aura]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.11'
version = '0.10.0-dev'

[dependencies.sp-core]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.11'


[dependencies.sp-finality-grandpa]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.11'


[dependencies.sp-runtime]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.11'


[dependencies.sp-timestamp]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.11'


[dependencies.substrate-frame-rpc-system]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.11'


[features]
default = []
runtime-benchmarks = ['node-carambola-runtime/runtime-benchmarks']
